# somnus

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  sdkconfig  sdkconfig.old
components/hat_kit/: CMakeLists.txt  Kconfig.projbuild  component.mk
components/hat_kit/hat_kit/: .board.c.swp  .board_def.h.swp  board.c  board_def.h  board_pins_config.c
components/hat_kit/pmod_codec/: pmod_codec.c
components/hat_kit/uda1334/: uda1334.c  uda1334.h
main/: .player.hpp.swp  .somnus.cpp.swp  CMakeLists.txt  buttons.hpp  player.hpp  somnus.cpp
